# thermal_daemon

./: .clang-tidy  .gitignore  Android.mk  COPYING  Makefile.am  README.txt  android_main_dbus.cpp  autogen.sh  configure.ac  thermal-conf.xml  thermal_daemon_usage.txt  thermald-resource.gresource.xml
.github/workflows/: ci.yml
data/: 90-thermald.rules.in  Makefile.am  org.freedesktop.thermald.conf  org.freedesktop.thermald.conf.in  org.freedesktop.thermald.service.in  thermal-cdev-order.xml  thermal-conf.xml  thermald-features.xml  thermald.conf  thermald.service.in
distribution_integration/: android_dbus_service_information  chromeos_gentoo_ebuild_spec  make_rpm.sh  thermal-daemon.spec  thermal_daemon.spec
docs/: Makefile.am  thermal_daemon-docs.xml
man/: thermal-conf.xml.1  thermal-conf.xml.5  thermald.1  thermald.8
misc/: valgrind.supp
netlink-if/: README  acpi_genetlink.h  genetlink.h  libnetlink.cpp  libnetlink.h  thd_nl_wrapper.cpp  thd_nl_wrapper.h
patches/: 0001-thermal-int340x_thermal-Export-GDDV.patch  0002-thermal-int340x_thermal-Export-OEM-vendor-variables.patch
rpms/: make_rpm.sh  thermal-daemon.spec  thermal_daemon-1.0-1.fc17.src.rpm  thermal_daemon-1.0-1.fc17.x86_64.rpm  thermal_daemon.spec
src/: 7zTypes.h  LzmaDec.c  LzmaDec.h  acpi_thermal_rel_ioct.h  android_main.cpp  hfi_proc.cpp  main.cpp  power_balancer.cpp  power_balancer.h  thd-dbus-interface.h  thd-dbus_interface.xml  thd_adaptive_types.h  thd_cdev.cpp  thd_cdev.h  thd_cdev_backlight.cpp  thd_cdev_backlight.h  thd_cdev_cpufreq.cpp  thd_cdev_cpufreq.h  thd_cdev_custom.cpp  thd_cdev_custom.h  thd_cdev_gen_sysfs.cpp  thd_cdev_gen_sysfs.h  thd_cdev_intel_pstate_driver.cpp  thd_cdev_intel_pstate_driver.h  thd_cdev_intel_pstate_turbo.cpp  thd_cdev_intel_pstate_turbo.h  thd_cdev_kbl_amdgpu.cpp  thd_cdev_kbl_amdgpu.h  thd_cdev_kbl_g_power.cpp  thd_cdev_kbl_g_power.h  thd_cdev_modem.cpp  thd_cdev_modem.h  thd_cdev_msr_pstates.cpp  thd_cdev_msr_pstates.h  thd_cdev_msr_pstates_limited.h  thd_cdev_msr_rapl.cpp  thd_cdev_msr_rapl.h  thd_cdev_msr_turbo_states.h  thd_cdev_order_parser.cpp  thd_cdev_order_parser.h  (+111 more)
test/: Makefile  cpufreq.sh  cpufreq.xml  default.sh  default.xml  exec_config_tests.sh  gddv_test_gen.py  intel_pstate.sh  intel_pstate.xml  intel_rapl.xml  powerclamp.sh  powerclamp.xml  processor.sh  processor_acpi.xml  rapl.sh  read_data_vault.py  readme_test.txt  run_all_tests.sh  test1.xml  test2.xml  test3.xml  test4.xml  test5.xml  test6.xml  test7.xml  test_cases.txt  test_pref.sh  thermal-debug-dump-fedora.sh  thermal-debug-dump-ubuntu.sh  thermal-dptf-tables-test-fedora.sh  thermal-dptf-tables-test-ubuntu.sh  thermal_conf.xml.1  thermal_conf.xml.2  thermal_conf.xml.3  thermal_conf.xml.4  thermal_conf.xml.5  thermal_conf.xml.6  thermal_conf.xml.7  thermal_conf.xml.itmt  thermal_conf.xml.virtual_sensor  (+6 more)
test/gddv_tests/: gddv_json_example.json  gddv_json_test_0.json  gddv_json_test_1.json  gddv_json_test_2.json
test/kbl-g-power/: README.TXT  run_thermald.sh  thermal_conf.xml
test/system_specific_wa/msi_protege_14/: README.txt  thermal-conf.xml
tests/: collect-umockdev.py  device.py  ioctls.py  output_checker.py  testcase.py  unittest_inspector.py
tests/x1c7/: acpi_thermal_rel  devices
tools/: format_dv_name.c  thermald_set_pref.sh
tools/dptf_table_converter/: COPYING  README  dptfxtract
tools/thermal_monitor/: README  ThermalMonitor.pro  logdialog.cpp  logdialog.h  logdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pollingdialog.cpp  pollingdialog.h  pollingdialog.ui  sensorsdialog.cpp  sensorsdialog.h  sensorsdialog.ui  thermaldinterface.cpp  thermaldinterface.h  tripsdialog.cpp  tripsdialog.h  tripsdialog.ui
tools/thermal_monitor/qcustomplot/: changelog.txt  qcustomplot.cpp  qcustomplot.h
